cmake_minimum_required(VERSION 4.0)
project(Progra_III)

set(CMAKE_CXX_STANDARD 20)

add_executable(Progra_III "main.cpp")
add_executable(Semana1 "Semana 1/Persona.h"
        "Semana 1/Persona.cpp"
        "Semana 1/main.cpp")
add_executable(Elipse "Semana 1/Semana 1 C2/Elipse.cpp" "Semana 1/Semana 1 C2/Elipse.h"
)
add_executable(Node "Semana 1/Semana 1 C2/Node.cpp" "Semana 1/Semana 1 C2/Node.h")
add_executable(EC_1 "EC 1/drone_system.cpp" "EC 1/drone_system.h")
add_executable(EC2 "EC 2/Tuit.cpp" "EC 2/Tuit.h")
add_executable(Semana4 "Semana 4/Clase.cpp")
add_executable(EC3 "EC 3/main.cpp" "EC 3/P1.cpp" "EC 3/P1.h"
        "EC 3/P2.cpp"
        "EC 3/P2.h"
        "EC 3/P3.cpp"
        "EC 3/P3.h"
        "EC 3/P4.cpp"
        "EC 3/P4.h"
        "EC 3/P5.cpp"
        "EC 3/P5.h"
        "EC 3/P6.cpp"
        "EC 3/P6.h"
        "EC 3/P7.cpp"
        "EC 3/P7.h"
        "EC 3/P8.cpp"
        "EC 3/P8.h"
        "EC 3/P9.cpp"
        "EC 3/P9.h"
        "EC 3/P10.cpp"
        "EC 3/P10.h"
        "EC 3/P11.cpp"
        "EC 3/P11.h"
        "EC 3/P12.cpp"
        "EC 3/P12.h")
add_executable(Semana7 "Semana 7/main.cpp"
        )
add_executable(EC5 "EC 5/p1.h"
        "EC 5/p2.h"
        "EC 5/p3.h"
        "EC 5/p4.h"
        "EC 5/p5.h"
        "EC 5/p6.h"
        "EC 5/p7.h"
        "EC 5/p8.h"
        "EC 5/p9.h")
